# opengl_disputes

./: .gitignore  .travis.yml  Makefile  README.md  make_dispute.py  run_tests.py  tox.ini
cookiecutter_template/: cookiecutter.json
cookiecutter_template/{{cookiecutter.opengl_dispute_name}}/: .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  DownloadProject.CMakeLists.cmake.in  Makefile  glad.c  {{cookiecutter.opengl_dispute_name}}.cpp  {{cookiecutter.opengl_dispute_name}}.hpp  {{cookiecutter.opengl_dispute_name}}_command_line_options.cpp  {{cookiecutter.opengl_dispute_name}}_opengl_window.cpp  {{cookiecutter.opengl_dispute_name}}_opengl_window.hpp
cookiecutter_template/{{cookiecutter.opengl_dispute_name}}/glad/include/glad/: glad.h
cookiecutter_template/{{cookiecutter.opengl_dispute_name}}/src/: {{cookiecutter.opengl_dispute_name}}_command_line_options.cpp  {{cookiecutter.opengl_dispute_name}}_command_line_options.hpp  {{cookiecutter.opengl_dispute_name}}_main.cpp  {{cookiecutter.opengl_dispute_name}}_main_loop.cpp  {{cookiecutter.opengl_dispute_name}}_main_loop.hpp  {{cookiecutter.opengl_dispute_name}}_opengl_window.cpp  {{cookiecutter.opengl_dispute_name}}_opengl_window.hpp
